compiler/testData/asJava/lightClasses/compilationErrors/ExpectedNestedClass.kt
// p.B.Nested
// FIR_COMPARISON

package p

expect class B {
    class Nested {}
}